# rusqbin

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  entry.sh  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
implementors/hyper/header/: trait.Header.js
implementors/rusqbin/storage/: trait.Bins.js
implementors/std/error/: trait.Error.js
rusqbin/: index.html  sidebar-items.js
rusqbin/errors/: enum.Error.html  index.html  sidebar-items.js
rusqbin/models/: BinSummary.t.html  IdExtractor.t.html  index.html  sidebar-items.js  struct.BinSummary.html  struct.Id.html  struct.IdExtractor.html  struct.Request.html
rusqbin/server/: BinsServer.t.html  XRusqBinId.t.html  index.html  sidebar-items.js  struct.BinsServer.html  struct.ContentType.html  struct.XRusqBinId.html
rusqbin/storage/: Bin.t.html  Bins.t.html  DeleteBinStatus.t.html  InMemoryBins.t.html  InsertRequestStatus.t.html  enum.DeleteBinStatus.html  enum.InsertRequestStatus.html  index.html  sidebar-items.js  struct.InMemoryBins.html  trait.Bins.html  type.Bin.html
src/: errors.rs  lib.rs  main.rs  models.rs  server.rs  storage.rs
src/rusqbin/: errors.rs.html  lib.rs.html  models.rs.html  server.rs.html  storage.rs.html
tests/: end_to_end_integration_tests.rs  internal_integration_tests.rs
tests/common/: mod.rs
