[package]
name = "rusqbin"
version = "0.1.6"
authors = [ "Lloyd <lloydmeta@gmail.com>" ]
description = "Rusqbin is a web server that stashes your requests for later retrieval so you can do end-to-end testing of code that makes HTTP calls. It is available as both a binary and a library."
license = "MIT"
homepage = "https://github.com/lloydmeta/rusqbin"
keywords = [ "http", "webserver", "requests", "testing", "log" ]

[dependencies]
hyper = "0.10"
time = "0.1"
clap = "2.21.2"
rustc-serialize = "0.3.23"
uuid = { version = "0.2", features = ["v4"] }
regex = "0.2"
url = "1.2.4"

[[bin]]
name = "rusqbin-server"
test = false
doc = false