[package]
name = "rusqbin"
version = "0.2.3"
authors = [ "Lloyd <lloydmeta@gmail.com>" ]
description = "Rusqbin is a web server that stashes your requests for later retrieval so you can do end-to-end testing of code that makes HTTP calls. It is available as both a binary and a library."
license = "MIT"
homepage = "https://github.com/lloydmeta/rusqbin"
documentation = "https://docs.rs/rusqbin"
keywords = [ "http", "webserver", "requests", "testing", "log" ]

[dependencies]
hyper = "0.11"
time = "0.1"
clap = "2.26"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.2", features = ["v4"] }
regex = "0.2"
url = "1.2.4"
log = "0.3"
env_logger = "0.3"
futures = "0.1"
lazy_static = "0.2"
openssl-probe = "0.1"

[dev-dependencies]
tokio-core = "0.1"

[[bin]]
name = "rusqbin"
test = false
doc = false

[badges]
travis-ci = { repository = "lloydmeta/rusqbin" }

[profile.release]
opt-level = 3
debug = false
lto = true